--- a/SmarkPark/SmarkPark/Controller/Login/LoginViewController.xib
+++ b/SmarkPark/SmarkPark/Controller/Login/LoginViewController.xib
@@ -25,7 +25,7 @@
             <rect key="frame" x="0.0" y="0.0" width="395" height="814"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WbB-CC-Ff8">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WbB-CC-Ff8">
                     <rect key="frame" x="0.0" y="0.0" width="395" height="814"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nye-N9-BqW" userLabel="top">
