--- a/SmarkPark/SmarkPark/Controller/Home/HomeViewController.xib
+++ b/SmarkPark/SmarkPark/Controller/Home/HomeViewController.xib
@@ -14,16 +14,21 @@
             <connections>
                 <outlet property="PM" destination="dgE-QK-j9w" id="IPX-cl-tcl"/>
                 <outlet property="city" destination="asy-0V-4RA" id="aEG-dc-t8s"/>
+                <outlet property="cityImageView" destination="hFW-1H-BvF" id="Lh8-fV-Mvg"/>
                 <outlet property="currentTemper" destination="wjO-Q5-Ogv" id="EMb-JU-oR0"/>
                 <outlet property="dayTemper" destination="K9C-nV-epi" id="z41-IL-KUo"/>
+                <outlet property="imageViewHeight" destination="MUb-hd-rSb" id="kF1-Ga-noj"/>
+                <outlet property="imageViewWidth" destination="hE7-3Z-X5W" id="PeL-0N-RSH"/>
                 <outlet property="leftLimit" destination="zkJ-ba-Qvl" id="DDr-8h-xy4"/>
                 <outlet property="rightLimit" destination="VNd-dv-sTX" id="vi0-wL-iTt"/>
                 <outlet property="scrollView" destination="uR7-JK-blu" id="f3x-ck-eIx"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="weatherBgWidth" destination="Wzt-Ef-gQo" id="Ntm-fH-n4S"/>
                 <outlet property="weatherHeight" destination="XoX-Mp-cLz" id="O3K-Kk-yfo"/>
                 <outlet property="weatherImage" destination="QFh-kj-H35" id="mlp-y6-I2C"/>
                 <outlet property="weatherText" destination="IXE-Fq-eqg" id="Mai-Jq-mHv"/>
                 <outlet property="weatherView" destination="sOi-lq-Fxl" id="K4X-AZ-Er2"/>
+                <outlet property="weatherWidth" destination="Kde-hk-L6d" id="7hO-Sy-udW"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -34,14 +39,18 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sOi-lq-Fxl">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="city" translatesAutoresizingMaskIntoConstraints="NO" id="hFW-1H-BvF">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="city" translatesAutoresizingMaskIntoConstraints="NO" id="hFW-1H-BvF">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="250" id="MUb-hd-rSb"/>
+                                <constraint firstAttribute="width" constant="375" id="hE7-3Z-X5W"/>
+                            </constraints>
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gZd-9p-Cug">
-                            <rect key="frame" x="20" y="60" width="335" height="160"/>
+                            <rect key="frame" x="37.5" y="60" width="300" height="160"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="城市" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="asy-0V-4RA">
-                                    <rect key="frame" x="146.5" y="10" width="41" height="24"/>
+                                    <rect key="frame" x="129.5" y="10" width="41" height="24"/>
                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
@@ -72,24 +81,24 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="60良" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dgE-QK-j9w">
-                                    <rect key="frame" x="235" y="68" width="60" height="25"/>
+                                    <rect key="frame" x="200" y="68" width="60" height="25"/>
                                     <color key="backgroundColor" red="0.044373627045521974" green="0.93489915132522583" blue="0.5297007674203752" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="25" id="CZn-6J-BG6"/>
-                                        <constraint firstAttribute="width" constant="60" id="aZR-6o-sb7"/>
+                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="aZR-6o-sb7"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                             <integer key="value" value="2"/>
                                         </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VNd-dv-sTX">
-                                    <rect key="frame" x="273" y="119.5" width="22" height="25"/>
+                                    <rect key="frame" x="238" y="119.5" width="22" height="25"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="25" id="QCR-wy-qZw"/>
@@ -102,11 +111,11 @@
                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                             <integer key="value" value="2"/>
                                         </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PM2.5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iau-R6-YI9">
-                                    <rect key="frame" x="178" y="68" width="49" height="25"/>
+                                    <rect key="frame" x="143" y="68" width="49" height="25"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="25" id="gns-OI-DvJ"/>
@@ -116,7 +125,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="今日限行" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="liu-wC-XTf">
-                                    <rect key="frame" x="169.5" y="119.5" width="69.5" height="25"/>
+                                    <rect key="frame" x="134.5" y="119.5" width="69.5" height="25"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="25" id="n2k-bO-ZYz"/>
@@ -126,7 +135,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zkJ-ba-Qvl">
-                                    <rect key="frame" x="249" y="119.5" width="22" height="25"/>
+                                    <rect key="frame" x="214" y="119.5" width="22" height="25"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="22" id="kc4-Gs-hZW"/>
@@ -139,7 +148,7 @@
                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                             <integer key="value" value="2"/>
                                         </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                     </userDefinedRuntimeAttributes>
                                 </label>
                             </subviews>
@@ -150,6 +159,7 @@
                                 <constraint firstItem="dgE-QK-j9w" firstAttribute="leading" secondItem="Iau-R6-YI9" secondAttribute="trailing" constant="8" id="5U2-xy-s5t"/>
                                 <constraint firstItem="QFh-kj-H35" firstAttribute="leading" secondItem="gZd-9p-Cug" secondAttribute="leading" constant="20" id="BXJ-Hi-bCS"/>
                                 <constraint firstItem="VNd-dv-sTX" firstAttribute="centerY" secondItem="liu-wC-XTf" secondAttribute="centerY" id="C22-VI-2ZR"/>
+                                <constraint firstAttribute="width" constant="300" id="Kde-hk-L6d"/>
                                 <constraint firstItem="K9C-nV-epi" firstAttribute="bottom" secondItem="wjO-Q5-Ogv" secondAttribute="bottom" id="LCM-tp-R6y"/>
                                 <constraint firstItem="VNd-dv-sTX" firstAttribute="centerY" secondItem="zkJ-ba-Qvl" secondAttribute="centerY" id="LdD-Wy-acO"/>
                                 <constraint firstItem="IXE-Fq-eqg" firstAttribute="centerY" secondItem="QFh-kj-H35" secondAttribute="centerY" id="NWB-O1-35a"/>
@@ -176,14 +186,12 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="gZd-9p-Cug" secondAttribute="trailing" constant="20" id="0wi-cn-IAn"/>
-                        <constraint firstAttribute="trailing" secondItem="hFW-1H-BvF" secondAttribute="trailing" id="IMT-6S-aIa"/>
+                        <constraint firstItem="gZd-9p-Cug" firstAttribute="centerX" secondItem="sOi-lq-Fxl" secondAttribute="centerX" id="Ezl-qT-O4z"/>
                         <constraint firstItem="hFW-1H-BvF" firstAttribute="top" secondItem="sOi-lq-Fxl" secondAttribute="top" id="Izh-cg-T9V"/>
                         <constraint firstAttribute="bottom" secondItem="gZd-9p-Cug" secondAttribute="bottom" constant="30" id="PZ4-0U-ZNM"/>
+                        <constraint firstAttribute="width" constant="375" id="Wzt-Ef-gQo"/>
                         <constraint firstAttribute="height" constant="250" id="XoX-Mp-cLz"/>
-                        <constraint firstItem="gZd-9p-Cug" firstAttribute="leading" secondItem="sOi-lq-Fxl" secondAttribute="leading" constant="20" id="aWq-Ak-KiU"/>
-                        <constraint firstItem="hFW-1H-BvF" firstAttribute="leading" secondItem="sOi-lq-Fxl" secondAttribute="leading" id="kOe-1E-kWL"/>
-                        <constraint firstAttribute="bottom" secondItem="hFW-1H-BvF" secondAttribute="bottom" id="xwZ-KI-M5P"/>
+                        <constraint firstItem="hFW-1H-BvF" firstAttribute="centerX" secondItem="sOi-lq-Fxl" secondAttribute="centerX" id="xxQ-es-efC"/>
                     </constraints>
                 </view>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uR7-JK-blu">
@@ -263,12 +271,11 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="sOi-lq-Fxl" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="5U8-m5-aZA"/>
+                <constraint firstItem="sOi-lq-Fxl" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="4tZ-d5-tZu"/>
                 <constraint firstAttribute="bottom" secondItem="uR7-JK-blu" secondAttribute="bottom" id="6dv-Ar-5lu"/>
                 <constraint firstItem="uR7-JK-blu" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Fbj-Cs-18E"/>
                 <constraint firstItem="uR7-JK-blu" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Gdw-ru-YLR"/>
                 <constraint firstItem="sOi-lq-Fxl" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Oxy-Pc-rNM"/>
-                <constraint firstAttribute="trailing" secondItem="sOi-lq-Fxl" secondAttribute="trailing" id="QGk-HT-tKc"/>
                 <constraint firstAttribute="trailing" secondItem="uR7-JK-blu" secondAttribute="trailing" id="fcX-pN-16w"/>
             </constraints>
             <point key="canvasLocation" x="73.5" y="29.5"/>
